--- a/pickup/maps/templates/friends/friends_sb.html
+++ b/pickup/maps/templates/friends/friends_sb.html
@@ -9,9 +9,9 @@
             <div class="row">
                 <div class="col-12">
                     <div class="list-group list-group-flush">
-                        <p id="friends_view_site" class="list-group-item btn" role="tab">View Friends</p>
-                        <p id="search_friends" class="list-group-item btn" role="tab">Add Friends</p>
-                        <p id="friends_requests_site" class="list-group-item btn" role="tab">Friend Requests</p>
+                        <p id="friends_view_site" class="list-group-item btn btn-side" role="tab">View Friends</p>
+                        <p id="search_friends" class="list-group-item btn btn-side" role="tab">Add Friends</p>
+                        <p id="friends_requests_site" class="list-group-item btn btn-side" role="tab">Friend Requests</p>
                     </div>
                 </div>
             </div>
