--- a/pickup/maps/templates/ajax-search.html
+++ b/pickup/maps/templates/ajax-search.html
@@ -3,19 +3,31 @@
 <div class="col-12">		
 <div class="list-group">
 {% if events|length > 0 %}
+	
 	{% for event in events %}
-	<div class="list-group-item border">
-		<p>{{ event.event_name }}</p>
-		<p>{{ event.event_descr }}</p>
-		<p>{{ event.location }}</p>
-		<p class="link" id="see-{{ event.id }}">See on map</p>
-		<script type="text/javascript">
-			$("#see-{{ event.id }}").click(function() {
-				map.setCenter([{{ event.lng }}, {{ event.lat }} ]);
-			});
-		</script>
-	</div>
-	{% endfor %}
+    <div class="list-group-item border">
+        <p class="text-center">{{ event.event_name }}</p>
+        <p>About: {{ event.event_descr }}<br><br>
+        {% if event.public %}
+            Visible to everyone
+        {% else %}
+            Visible to {{ event.user }}'s friends
+        {% endif %}
+        </p>
+
+
+        <p>Happening in: {{ event.location }}</p>
+        <div class="text-center">
+            <p class="link btn btn-success text-center" id="see-{{ event.id }}">See on map</p>
+            <script type="text/javascript">
+                $("#see-{{ event.id }}").click(function() {
+                    map.setCenter([{{ event.lng }}, {{ event.lat }} ]);
+                });
+            </script>
+        </div>
+        
+    </div>
+    {% endfor %}
 
 {% else %}
 	<li class="list-group-item text-danger">No results</li>
