--- a/pickup/maps/templates/profile/profile_sb.html
+++ b/pickup/maps/templates/profile/profile_sb.html
@@ -8,10 +8,10 @@
             <div class="row">
                 <div class="col-12">
                     <div class="list-group list-group-flush">
-                        <p class="list-group-item btn" id="profile-username" role="tab"><b>Username:</b> {{ user.username }}</p>
-                        <p class="list-group-item btn" role="tab" id="profile-first_name"><b>First Name:</b> {{ user.first_name }}</p>
-                        <p class="list-group-item btn" role="tab" id="profile-last_name"><b>Last Name:</b> {{ user.last_name }}</p>
-                        <p class="list-group-item btn" role="tab" id="profile-email"><b>Email:</b> {{ user.email }}</p>
+                        <p class="list-group-item text-center" id="profile-username" role="tab"><b>Username:</b> {{ user.username }}</p>
+                        <p class="list-group-item text-center" role="tab" id="profile-first_name"><b>First Name:</b> {{ user.first_name }}</p>
+                        <p class="list-group-item text-center" role="tab" id="profile-last_name"><b>Last Name:</b> {{ user.last_name }}</p>
+                        <p class="list-group-item text-center" role="tab" id="profile-email"><b>Email:</b> {{ user.email }}</p>
                     </div>
                 </div>
             </div>
