Base stuff for remove friend
Not functional yet, David please check the backend in views.py

--- a/pickup/maps/templates/friends/friends_view.html
+++ b/pickup/maps/templates/friends/friends_view.html
@@ -8,6 +8,7 @@
         <p>{{ friend.username }}</p>
         <p>{{ friend.first_name }}</p>
         <p>{{ friend.last_name }}</p>
+        <button id='send-to-{{friend.username}}' class='btn btn-primary remove'>Remove</button>
     </div>
     {% endfor %}
 
