popup formatting, friend remove adjusting

--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -5,7 +5,7 @@
     <div class='container'>
         <div class="row">
             <div class="col text-center text-dark">
-                        <h2 style="font-family: Baskerville; margin-top: 5%; color:#ea7400">Meet-up</h2>
+                        <h2 style="font-family: monaco,Consolas,Lucida Console,monospace; margin-top: 5%; color:#ea7400">meet-up</h2>
             </div>
         </div>
     </div>
