--- a/pickup/maps/templates/friends/friends_requests.html
+++ b/pickup/maps/templates/friends/friends_requests.html
@@ -7,8 +7,10 @@
     <div class="list-group-item border">
         <p>{{ request.from_user.first_name }} {{ request.from_user.last_name }}</p>
         <p>{{ user.username }}</p>
-        <button id='send-to-{{request.from_user.username}}' class='btn btn-primary accept'>Accept</button>
-        <button id='send-to-{{request.from_user.username}}' class='btn btn-primary reject'>Reject</button>
+        <div class="text-center">
+        	<button id='accept-{{request.from_user.username}}' class='btn btn-success accept btn-block'>Accept</button>
+        	<button id='reject-{{request.from_user.username}}' class='btn btn-danger reject btn-block'>Reject</button>
+        </div>
     </div>
     {% endfor %}
 
