--- a/pickup/maps/templates/friends/friends_view.html
+++ b/pickup/maps/templates/friends/friends_view.html
@@ -8,7 +8,7 @@
         <p>{{ friend.username }}</p>
         <p>{{ friend.first_name }}</p>
         <p>{{ friend.last_name }}</p>
-        <button id='send-to-{{friend.username}}' class='btn btn-primary remove'>Remove Friend</button>
+        <button id='send-to-{{friend.username}}' class='btn btn-danger remove btn-block'>Remove friend</button>
     </div>
     {% endfor %}
 
