--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -163,6 +163,6 @@ small {
 .mapboxgl-popup-content {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    background-color:rgb(0, 120, 219);
+    background-color: #f2f2f2;
     color: black;
 }
