--- a/pickup/maps/templates/add-event.html
+++ b/pickup/maps/templates/add-event.html
@@ -5,7 +5,7 @@
 
 
     <div id ="testing" class="bodycontent" >
-        <p class="border home_sb_link btn btn-home">Home</p>
+        <p class="border home_sb_link btn btn-home" style="margin-top: 10%">Home</p>
         <br>
 
         {%  if event_form %}
@@ -18,8 +18,8 @@
                     <p id="date-error-msg" style="text-align: center; font-weight: bold; font-size: 14px; color: black;"></p>
                 </div>
 
-                <button type="submit" class='btn btn-success border' id="add-event-submit" style="margin-bottom: 10px;">Add Event</button>
-                <button type="button" class='btn btn-danger border home_sb_link'>Cancel</button>
+                <button type="submit" class='btn btn border' id="add-event-submit" style="color:white; background-color:orange ">Add Event</button>
+                <button type="button" class='btn btn border home_sb_link' style="color:white; background-color:#004fed; ">Cancel</button>
             </form>
         {% endif %}
 
