--- a/pickup/maps/templates/friends/friends_add.html
+++ b/pickup/maps/templates/friends/friends_add.html
@@ -9,7 +9,7 @@
         <p>{{ user.first_name }} {{ user.last_name }}</p>
 		<p class="username">Username: {{ user.username }}</p>
 	</div>
-	<button id='send-to-{{user.username}}' class='btn btn-primary send'>Send friend request</button>
+	<button id='send-to-{{user.username}}' class='btn btn-good send'>Send friend request</button>
 	{% endfor %}
 
 {% else %}
