--- a/pickup/maps/templates/friends/friends_sb.html
+++ b/pickup/maps/templates/friends/friends_sb.html
@@ -4,7 +4,7 @@
     {% load static %}
     <div class="bodycontent">
     <!-- Friends Information -->
-        <p class="border home_sb_link btn btn-home">Home</p>
+        <p class="border home_sb_link btn btn-home" style="margin-top: 10%">Home</p>
         <div class="container">
             <div class="row">
                 <div class="col-12">
