--- a/pickup/maps/templates/profile/profile_sb.html
+++ b/pickup/maps/templates/profile/profile_sb.html
@@ -2,7 +2,7 @@
     {% load crispy_forms_tags %}
     {% load static %}
     <div class="bodycontent">
-        <p class="border home_sb_link btn btn-home">Home</p>
+        <p class="border home_sb_link btn btn-home" style="margin-top: 10%">Home</p>
 
         <div class="container">
             <div class="row">
