--- a/pickup/maps/templates/upcoming-events.html
+++ b/pickup/maps/templates/upcoming-events.html
@@ -13,7 +13,7 @@
         
 
         <div class="text-center">
-            <p class="link btn btn-success text-center" id="see-{{ event.id }}">See map for more info</p>
+            <p class="link btn btn-primary text-center" id="see-{{ event.id }}">See map for more info</p>
             <script type="text/javascript">
                 $("#see-{{ event.id }}").click(function() {
                     map.setCenter([{{ event.lng }}, {{ event.lat }} ]);
