--- a/pickup/maps/templates/friends/friends_requests_site.html
+++ b/pickup/maps/templates/friends/friends_requests_site.html
@@ -1,6 +1,6 @@
 {% block sidebar-content %}
     <div id ="testing" class="bodycontent">
-        <p class="border home_sb_link btn btn-home">Home</p>
+        <p class="border home_sb_link btn btn-home" style="margin-top: 10%">Home</p>
         <div>
             <div id="friends_requests">
                 <!-- Fill this with results -->
