--- a/pickup/maps/templates/friends/friends_view.html
+++ b/pickup/maps/templates/friends/friends_view.html
@@ -7,7 +7,7 @@
     <div class="list-group-item border text-center">
         <p>{{ friend.first_name }} {{ friend.last_name }}</p>
 		<p class="username">Username: {{ friend.username }}</p>
-        <button id='send-to-{{friend.username}}' class='btn btn-danger remove btn-block'>Remove friend</button>
+        <button id='send-to-{{friend.username}}' class='btn remove btn-good border'>Remove friend</button>
     </div>
     {% endfor %}
 
