--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -5,7 +5,7 @@
     <div class='container'>
         <div class="row">
             <div class="col text-center text-dark">
-                        <h2 style="font-family: monaco,Consolas,Lucida Console,monospace; margin-top: 5%; color:#ea7400">meet-up</h2>
+                        <h2 style="font-family: monaco,Consolas,Lucida Console,monospace; font-size: xx-large; margin-top: 15%; margin-bottom: 10%; color:#ea7400">meet-up</h2>
             </div>
         </div>
     </div>
@@ -14,13 +14,12 @@
         <div class="row">
             <div class="col-12">
                 <div class="list-group body list-group-flush">
-                            <p class="list-group-item home_sb_link btn-side" role="tab">Home</p>
-                            <p id="profile_sb_link" class="list-group-item btn-side" role="tab">View Profile</p>
-                            <p id="friends_sb_link" class="list-group-item btn-side" role="tab">Friends <span class="badge badge-primary" id="home-notifs"></span></p>
-                            <p id="upcoming" class="list-group-item btn-side" role="tab">View My Upcoming Events <span class="badge badge-primary" id="upcoming-number"></span></p>
-                            <p id="add_event_link" class="list-group-item btn-side" role="tab">Add an event</p>
-                            <p id="search_events" class="list-group-item btn-side" role="tab">Search for events</p> 
-                            <a href="{% url 'logout' %}" class="list-group-item btn-side" style="color: black;" role="tab">Logout</a>   
+                    <p id="upcoming" class="list-group-item btn-side" role="tab">View My Upcoming Events <span class="badge badge-primary" id="upcoming-number"></span></p>
+                    <p id="add_event_link" class="list-group-item btn-side" role="tab">Add an event</p>
+                    <p id="search_events" class="list-group-item btn-side" role="tab">Search for events</p>
+                    <p id="friends_sb_link" class="list-group-item btn-side" role="tab">Friends <span class="badge badge-primary" id="home-notifs"></span></p>
+                    <p id="profile_sb_link" class="list-group-item btn-side" role="tab">View Profile</p>
+                    <a href="{% url 'logout' %}" class="list-group-item btn-side" style="color: black;" role="tab">Logout</a>
                 </div>
             </div>
         </div>
