--- a/pickup/maps/templates/add-event.html
+++ b/pickup/maps/templates/add-event.html
@@ -16,6 +16,7 @@
                                 
                 <div>
                     <p id="date-error-msg" style="text-align: center; font-weight: bold; font-size: 14px; color: black;"></p>
+                    <p id="time-error-msg" style="text-align: center; font-weight: bold; font-size: 14px; color: black;"></p>
                 </div>
 
                 <button type="submit" class='btn btn border' id="add-event-submit" style="color:white; background-color:orange ">Add Event</button>
@@ -41,34 +42,76 @@
 
 
     <img src="{% static 'pixel.png' %}" onload='
+        var dateValid = false;
+        var timeValid = false;
+
+
         function invalid() {
-            document.getElementById("add-event-submit").disabled = true;
-            document.getElementById("date-error-msg").innerText = "Starting time must be less than ending time.";
-        }
-        function valid() {
-            document.getElementById("add-event-submit").disabled = false;
-            document.getElementById("date-error-msg").innerText = "";
+            if (!dateValid)
+                document.getElementById("add-event-submit").disabled = true;
+                document.getElementById("date-error-msg").innerText = "Date cannot be in the past.";
+            if (!timeValid)
+                document.getElementById("add-event-submit").disabled = true;
+                document.getElementById("time-error-msg").innerText = "Starting time must be less than ending time.";
+            if (timeValid)
+                document.getElementById("time-error-msg").innerText = "";
+            if (dateValid)
+                document.getElementById("date-error-msg").innerText = "";
+
+            if (timeValid && dateValid)
+                document.getElementById("add-event-submit").disabled = false;
         }
 
         var start = parseInt($("#id_start_time").val().substring(0, 2));
         var end   = parseInt($("#id_end_time").val().substring(0, 2));
 
-        if (start >= end) invalid();
+        if (start >= end) {
+            timeValid = false;
+            invalid();
+        }
 
         $(document).on("change", "#id_start_time", function() {
             start = parseInt($("#id_start_time").val().substring(0, 2));
             end   = parseInt($("#id_end_time").val().substring(0, 2));
 
-            if (start >= end) invalid();
-            else valid();
+            if (start >= end)
+                timeValid = false;
+            else
+                timeValid = true;
+            invalid();
         });
 
         $(document).on("change", "#id_end_time", function() {
             start = parseInt($("#id_start_time").val().substring(0, 2));
             end   = parseInt($("#id_end_time").val().substring(0, 2));
 
-            if (start >= end) invalid();
-            else valid();
+            if (start >= end)
+                timeValid = false;
+            else
+                timeValid = true;
+            invalid();
+        });
+
+        $(document).on("change", "#id_date", function(event) {
+            d = new Date(event.target.value);
+            now = new Date();
+            
+            if (d.getFullYear() < now.getFullYear())
+                dateValid = false;
+            else if (d.getFullYear() == now.getFullYear()) {
+                if (d.getMonth() < now.getMonth())
+                    dateValid = false;
+                else if (d.getMonth() == now.getMonth())
+                    if (d.getDate() < now.getDate())
+                        dateValid = false;
+                    else
+                        dateValid = true;
+                else 
+                    dateValid = true;
+            }
+            else
+                dateValid = true;
+            invalid();
         });
     '>
 {% endblock sidebar-content %}
