--- a/pickup/users/templates/acc_active_email.html
+++ b/pickup/users/templates/acc_active_email.html
@@ -1,5 +1,8 @@
 {% autoescape off %}
-Hi {{ user.username }},
-Please click on the link to confirm your registration,
+Hi {{ user.first_name }},
+
+Welcome to meetup - a user-friendly graphical scheduling app for you and your friends.
+
+Follow the link below to confirm your registration and get started:
 http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
 {% endautoescape %}
