--- a/pickup/users/templates/acc_active_email.html
+++ b/pickup/users/templates/acc_active_email.html
@@ -4,5 +4,5 @@ Hi {{ user.first_name }},
 Welcome to meetup - a user-friendly graphical scheduling app for you and your friends.
 
 Follow the link below to confirm your registration and get started:
-http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
+https://{{ domain }}{% url 'activate' uidb64=uid token=token %}
 {% endautoescape %}
